--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -35,6 +35,13 @@
                 <li class="nav-item"><a class="nav-link" href="/search_clients">Search Clients</a></li>
             </ul>
         </nav>
+
+        <!--Запити -->
+        <div class="text-center mt-4">
+            <a href="/clients_by_quarter" class="btn btn-info">View Clients by Quarter</a>
+            <a href="/resolved_pairs" class="btn btn-success">View Resolved Pairs</a>
+
+        </div>
     </div>
 
     <!-- Bootstrap JS -->
