--- a/app/templates/meetings.html
+++ b/app/templates/meetings.html
@@ -10,7 +10,7 @@
     <div class="container mt-5">
         <h1 class="text-center mb-4">Meetings</h1>
 
-        <!-- Flash-повідомлення -->
+        <!-- Flash Messages -->
         {% with messages = get_flashed_messages(with_categories=True) %}
             {% if messages %}
                 <div class="mb-4">
@@ -24,7 +24,7 @@
             {% endif %}
         {% endwith %}
 
-        <!-- Таблиця з зустрічами -->
+        <!-- Meetings Table -->
         <table class="table table-striped table-bordered">
             <thead>
                 <tr>
@@ -40,8 +40,12 @@
                 {% for meeting in meetings %}
                 <tr>
                     <td>{{ meeting["_id"] }}</td>
-                    <td>{{ meeting["client1_id"] }}</td>
-                    <td>{{ meeting["client2_id"] }}</td>
+                    <td>
+                        {{ meeting.client1["gender"] }} - {{ meeting.client1["age"] }} years - {{ meeting.client1["zodiac_sign"] }}
+                    </td>
+                    <td>
+                        {{ meeting.client2["gender"] }} - {{ meeting.client2["age"] }} years - {{ meeting.client2["zodiac_sign"] }}
+                    </td>
                     <td>{{ meeting["date"] }}</td>
                     <td>{{ meeting["status"] }}</td>
                     <td>
@@ -51,9 +55,10 @@
                 </tr>
                 {% endfor %}
             </tbody>
+            
         </table>
 
-        <!-- Пагінація -->
+        <!-- Pagination -->
         <nav aria-label="Page navigation">
             <ul class="pagination justify-content-center">
                 {% if page > 1 %}
