сделал третьи запрос про встречи на месяц тек и на след

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -38,8 +38,10 @@
 
         <!--Запити -->
         <div class="text-center mt-4">
-            <a href="/clients_by_quarter" class="btn btn-info">View Clients by Quarter</a>
+            <a href="/clients_by_quarter" class="btn btn-success">View Clients by Quarter</a>
             <a href="/resolved_pairs" class="btn btn-success">View Resolved Pairs</a>
+            <a href="/meetings_current_month" class="btn btn-success">View Meetings by Month</a>
+
 
         </div>
     </div>
