--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -41,6 +41,8 @@
             <a href="/clients_by_quarter" class="btn btn-success">View Clients by Quarter</a>
             <a href="/resolved_pairs" class="btn btn-success">View Resolved Pairs</a>
             <a href="/meetings_current_month" class="btn btn-success">View Meetings by Month</a>
+            <a href="/clients_by_period" class="btn btn-primary">View Registered Clients by Period</a>
+
 
 
         </div>
