--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -81,6 +81,10 @@
           >View Matching Grooms</a
         >
       </div>
+
+      <div class="text-center mt-4">
+        <a href="/select_user" class="btn btn-primary">Find Matches</a>
+      </div>
     </div>
 
     <script>
