--- a/app/templates/matches.html
+++ b/app/templates/matches.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <meta charset="UTF-8" />
-    <title>Matches</title>
-  </head>
-  <body>
-    <div class="container mt-5">
-      <h1>Matches for {{ user.self_description }}</h1>
-      <ul class="list-group">
-        {% for match in matches %}
-        <li class="list-group-item">
-          {{ match.self_description }} ({{ match.age }} years, {{
+
+<head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <meta charset="UTF-8" />
+  <title>Matches</title>
+</head>
+
+<body>
+  <div class="container mt-5">
+    <h1>Matches for {{ user.self_description }}</h1>
+    <ul class="list-group">
+      {% for match in matches %}
+      <li class="list-group-item">
+        {{ match.self_description }} ({{ match.age }} years, {{
           match.zodiac_sign }})
-        </li>
-        {% endfor %}
-      </ul>
-    </div>
-  </body>
+      </li>
+      {% endfor %}
+    </ul>
+  </div>
+</body>
+
 </html>
