--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -58,7 +58,7 @@
       <a href="/meetings_current_month" class="btn btn-success">View Meetings by Month</a>
       <a href="/clients_by_period" class="btn btn-primary">View Registered Clients by Period</a>
       <a href="/non_missing_partners" class="btn btn-warning">Find Non-Missing Partners</a>
-      <a href="/matching_grooms" class="btn btn-primary">View Matching Grooms</a>
+      <a href="/matching_grooms/-" class="btn btn-primary">View Matching Grooms</a>
     </div>
 
     <div class="text-center mt-4">
