--- a/app/templates/add_client.html
+++ b/app/templates/add_client.html
@@ -51,30 +51,27 @@
         <hr />
         <h5>Partner Requirements</h5>
         <div class="row mb-3">
-          <div class="col-md-6">
-            <label for="partner_zodiac_sign" class="form-label"
-              >Preferred Zodiac Signs</label
-            >
-            <select
-              id="partner_zodiac_sign"
-              name="partner_zodiac_sign"
-              class="form-select"
-              multiple
-            >
-              <option value="Taurus">Taurus</option>
-              <option value="Gemini">Gemini</option>
-              <option value="Aries">Aries</option>
-              <option value="Cancer">Cancer</option>
-              <option value="Leo">Leo</option>
-              <option value="Virgo">Virgo</option>
-              <option value="Libra">Libra</option>
-              <option value="Scorpio">Scorpio</option>
-              <option value="Sagittarius">Sagittarius</option>
-              <option value="Capricorn">Capricorn</option>
-              <option value="Aquarius">Aquarius</option>
-              <option value="Pisces">Pisces</option>
-            </select>
+          <div class="col-md-12">
+            <label for="partner_zodiac_signs" class="form-label">Preferred Zodiac Signs</label>
+            <div id="partner_zodiac_signs" class="form-check">
+              <div class="row">
+                {% for sign in ["Taurus", "Gemini", "Aries", "Cancer", "Leo", "Virgo", "Libra", "Scorpio", "Sagittarius", "Capricorn", "Aquarius", "Pisces"] %}
+                <div class="col-md-4">
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    id="{{ sign.lower() }}"
+                    name="partner_zodiac_sign"
+                    value="{{ sign }}"
+                  />
+                  <label class="form-check-label" for="{{ sign.lower() }}">{{ sign }}</label>
+                </div>
+                {% endfor %}
+              </div>
+            </div>
           </div>
+        </div>
+        <div class="row mb-3">
           <div class="col-md-6">
             <label for="partner_min_age" class="form-label">Minimum Age</label>
             <input
@@ -86,8 +83,6 @@
               max="99"
             />
           </div>
-        </div>
-        <div class="row mb-3">
           <div class="col-md-6">
             <label for="partner_max_age" class="form-label">Maximum Age</label>
             <input
@@ -99,10 +94,10 @@
               max="99"
             />
           </div>
+        </div>
+        <div class="row mb-3">
           <div class="col-md-6">
-            <label for="partner_min_height" class="form-label"
-              >Minimum Height (cm)</label
-            >
+            <label for="partner_min_height" class="form-label">Minimum Height (cm)</label>
             <input
               type="number"
               id="partner_min_height"
@@ -112,12 +107,8 @@
               max="250"
             />
           </div>
-        </div>
-        <div class="row mb-3">
           <div class="col-md-6">
-            <label for="partner_max_height" class="form-label"
-              >Maximum Height (cm)</label
-            >
+            <label for="partner_max_height" class="form-label">Maximum Height (cm)</label>
             <input
               type="number"
               id="partner_max_height"
@@ -127,10 +118,10 @@
               max="250"
             />
           </div>
+        </div>
+        <div class="row mb-3">
           <div class="col-md-6">
-            <label for="partner_min_weight" class="form-label"
-              >Minimum Weight (kg)</label
-            >
+            <label for="partner_min_weight" class="form-label">Minimum Weight (kg)</label>
             <input
               type="number"
               id="partner_min_weight"
@@ -140,12 +131,8 @@
               max="150"
             />
           </div>
-        </div>
-        <div class="row mb-3">
           <div class="col-md-6">
-            <label for="partner_max_weight" class="form-label"
-              >Maximum Weight (kg)</label
-            >
+            <label for="partner_max_weight" class="form-label">Maximum Weight (kg)</label>
             <input
               type="number"
               id="partner_max_weight"
