--- a/app/templates/clients.html
+++ b/app/templates/clients.html
@@ -10,7 +10,7 @@
     <div class="container mt-5">
         <h1 class="text-center mb-4">Clients List</h1>
 
-        <!-- Flash-повідомлення -->
+        <!-- Flash Messages -->
         {% with messages = get_flashed_messages(with_categories=True) %}
             {% if messages %}
                 <div class="mb-4">
@@ -24,7 +24,7 @@
             {% endif %}
         {% endwith %}
 
-        <!-- Фільтрація та сортування -->
+        <!-- Filters and Sorting -->
         <div class="mb-4">
             <form method="GET" class="row g-3">
                 <div class="col-md-3">
@@ -63,8 +63,7 @@
             </form>
         </div>
         
-
-        <!-- Таблиця з клієнтами -->
+        <!-- Clients Table -->
         <table class="table table-striped table-bordered">
             <thead>
                 <tr>
@@ -89,7 +88,17 @@
                     <td>{{ client["weight"] }}</td>
                     <td>{{ client["zodiac_sign"] }}</td>
                     <td>{{ client["self_description"] }}</td>                    
-                    <td>{{client["partner_requirements"] }}</td>
+                    <td>
+                        <ul class="list-unstyled mb-0">
+                            {% for key, value in client["partner_requirements"].items() %}
+                                {% if key == "partner_zodiac_signs" %}
+                                    <li><strong>Zodiac Signs:</strong> {{ ", ".join(value) }}</li>
+                                {% else %}
+                                    <li><strong>{{ key.replace("_", " ").capitalize() }}:</strong> {{ value }}</li>
+                                {% endif %}
+                            {% endfor %}
+                        </ul>
+                    </td>
                     <td>
                         <a href="/view_client/{{ client['_id'] }}" class="btn btn-sm btn-info">View</a>
                         <button
@@ -111,7 +120,7 @@
             </tbody>
         </table>
 
-        <!-- Пагінація -->
+        <!-- Pagination -->
         <nav aria-label="Page navigation">
             <ul class="pagination justify-content-center">
                 {% if page > 1 %}
@@ -137,8 +146,7 @@
     <script>
         async function editClient(button) {
           const clientId = button.getAttribute("data-id");
-          
-        location.replace(`/edit_client/${clientId}`);
+          location.replace(`/edit_client/${clientId}`);
         }
   
         async function deleteClient(button) {
