--- a/app/templates/completed_meetings.html
+++ b/app/templates/completed_meetings.html
@@ -1,16 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Сompleted Meetings</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canceled_Meetings</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
-</head>
+  <body>
+    <div class="container mt-5">
+      <h1 class="text-center mb-4">Completed Meetings</h1>
 
-<body>
-    {%for meeting in meetings%}
-    {{meeting}}
-</body>
+      <!-- Meetings List -->
+      <ul class="list-group">
+        {% for meeting in meetings %}
+        <li class="list-group-item">
+          <strong>ID:</strong> {{ meeting["_id"] }} <br />
+          <strong>Client 1 ID:</strong> {{ meeting["client1_id"] }} <br />
+          <strong>Client 2 ID:</strong> {{ meeting["client2_id"] }} <br />
+          <strong>Date:</strong> {{ meeting["archive_date"] }} <br />
+        </li>
+        {% endfor %}
+      </ul>
 
+      {% if meetings|length == 0 %}
+      <p class="text-center mt-4">No Completed meetings found.</p>
+      {% endif %}
+
+      <a href="/" class="btn btn-primary mt-4">Back to Home</a>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
