--- a/app/templates/matching_grooms.html
+++ b/app/templates/matching_grooms.html
@@ -25,7 +25,11 @@
         </div>
         {% endif %}
         {% endwith %}
-
+        <select class="select" id="bride_select">
+            {% for bride in brides %}
+            <option>{{bride["self_description"]}}</option>
+            {%endfor%}
+        </select>
         <!-- Список відповідних женихів -->
         <table class="table table-striped table-bordered">
             <thead>
@@ -56,7 +60,12 @@
 
         <a href="/" class="btn btn-primary mt-4">Back to Home</a>
     </div>
-
+    <script>
+        document.getElementById("bride_select").onchange = function()
+        {
+            location.replace(`/matching_grooms/${ document.getElementById("bride_select").value}`)
+        }
+    </script>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
